--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
     </head>
     <body>
         <h1>ISS</h1>
-        <div id=""></div>
-        <div id="gps"></div>
-        <div id="map"></div>
+        <div id="contenaire">
+            <div id=""></div>
+            <div id="gps"></div>
+            <div id="map"></div>
+            <label for="iconSelect">Choisissez une icône :</label>
+            <select id="iconSelect">
+                <option value="issIcon">ISS</option>
+                <option value="astronauteIcon">Astronaute</option>
+                <option value="aigleIcon">Aigles</option>
+            </select>
+        </div>
+        <h2>Adresse actuelle : </h2>
+        <div id="adresseISS"></div>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
         <script src="./scripts/app.js" type="module" defer></script>
