--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Position ISS en direct</title>
+        <link rel="icon" type="image/vnd.icon" href="/images/IconIss.png">
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
             integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
@@ -11,8 +12,8 @@
     </head>
     <body>
         <h1>ISS</h1>
+        <div id="heureDate"></div>
         <div id="contenaire">
-            <div id=""></div>
             <div id="gps"></div>
             <div id="map"></div>
             <label for="iconSelect">Choisissez une icône :</label>
@@ -20,6 +21,9 @@
                 <option value="issIcon">ISS</option>
                 <option value="astronauteIcon">Astronaute</option>
                 <option value="aigleIcon">Aigles</option>
+                <option value="avion">Avion</option>
+                <option value="planete">Planete</option>
+                <option value="fusee">Fusee</option>
             </select>
         </div>
         <h2>Adresse actuelle : </h2>
